# algebra-svd

./: .gitignore  Makefile  pyproject.toml
src/image_compression/: Makefile  __init__.py  compile_svd.c  compile_svd.h  main.c  prueba  qr_decomposition.py  svd.c  svd.h
src/image_compression/qr_decomposition/: Makefile  householder.c  householder.h  main.c  qr_decomp.c  qr_decomp.h  qr_main  tools.c  tools.h
tests/: __init__.py
tests/image_compression/qr_decomposition/: test_householder.c  test_qr_decomp.c  test_tools.c
