[project]
name = "image-compression"
version = "0.1.0"
description = ""
authors = [
    {name = "b4lrok",email = "juanyago2106@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "image_compression", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
